Story-19: Enhanced `/estimate` SPA routing, improved user and board endpoints, refined security context usage, standardized JWT properties, and adjusted logging configuration.