@@ -43,7 +43,7 @@ public class EstimateController {
     }
 
     // Allowed Fibonacci values
-    private static final List<String> FIBONACCI = List.of("0","1","2","3","5","8","13","21","34");
+    private static final List<String> FIBONACCI = List.of("0", "1", "2", "3", "5", "8", "13", "21", "34");
 
     // In-memory state per board
     private static final Map<UUID, RoundState> STATES = new ConcurrentHashMap<>();
@@ -51,8 +51,10 @@ public class EstimateController {
     private static final Map<UUID, ConcurrentHashMap<UUID, SseEmitter>> EMITTERS = new ConcurrentHashMap<>();
 
     // --- Models ---
-    public record TaskDto(String key, String title, String link, String description) {}
-    public enum RoundStatus { voting, revealed }
+    public record TaskDto(String key, String title, String link, String description) {
+    }
+
+    public enum RoundStatus {voting, revealed}
 
     public static class ParticipantDto {
         public UUID userId;
@@ -91,8 +93,181 @@ public class EstimateController {
         public Summary summary;
     }
 
-    public record VoteRequest(@NotBlank String value) {}
-    public record RoundRequest(String taskId, String title, String link, String description) {}
+    public record VoteRequest(@NotBlank String value) {
+    }
+
+    public record RoundRequest(String taskId, String title, String link, String description) {
+    }
+
+    @GetMapping({"/state", "/estimate"})
+    public ResponseEntity<?> state(@PathVariable UUID id) {
+        Optional<User> uo = currentUser();
+        if (uo.isEmpty())
+            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(error("UNAUTHORIZED", "Missing or invalid token"));
+        ResponseEntity<?> access = checkBoardAccess(id, uo.get());
+        if (access.getStatusCode().isError()) return access;
+        Board board = (Board) access.getBody();
+        RoundState s = stateForBoard(id);
+        Map<String, Object> resp = new LinkedHashMap<>();
+        resp.put("status", s.status.name());
+        resp.put("task", s.task);
+        assert board != null;
+        resp.put("participants", participants(board, s));
+        resp.put("allowedValues", FIBONACCI);
+        resp.put("summary", s.status == RoundStatus.revealed ? s.summary : null);
+        log.debug("State fetched: boardId={}, status={}, votes={}, task={}", id, s.status, s.votes.size(), s.task != null ? s.task.key() : null);
+        return ResponseEntity.ok(resp);
+    }
+
+    @PostMapping("/join")
+    public ResponseEntity<?> join(@PathVariable UUID id) {
+        Optional<User> uo = currentUser();
+        if (uo.isEmpty())
+            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(error("UNAUTHORIZED", "Missing or invalid token"));
+        User user = uo.get();
+        Optional<Board> b = boardService.findById(id);
+        if (b.isEmpty()) return ResponseEntity.status(HttpStatus.NOT_FOUND).body(error("NOT_FOUND", "Board not found"));
+        RoundState s = stateForBoard(id);
+        s.lastSeen.put(user.getId(), Instant.now());
+        // Emit event
+        log.info("User joined: boardId={}, userId={}", id, user.getId());
+        emit(id, "USER_JOINED", Map.of("userId", user.getId(), "name", user.getEmail()));
+        return ResponseEntity.ok(Map.of("ok", true));
+    }
+
+    @PostMapping("/vote")
+    public ResponseEntity<?> vote(@PathVariable UUID id, @RequestBody VoteRequest dto) {
+        Optional<User> uo = currentUser();
+        if (uo.isEmpty())
+            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(error("UNAUTHORIZED", "Missing or invalid token"));
+        User user = uo.get();
+        Optional<Board> b = boardService.findById(id);
+        if (b.isEmpty()) return ResponseEntity.status(HttpStatus.NOT_FOUND).body(error("NOT_FOUND", "Board not found"));
+        RoundState s = stateForBoard(id);
+        if (s.status == RoundStatus.revealed)
+            return ResponseEntity.status(HttpStatus.UNPROCESSABLE_ENTITY).body(error("REVEALED", "Voting closed"));
+        if (!FIBONACCI.contains(dto.value()))
+            return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(error("BAD_VALUE", "Value not allowed"));
+        // Idempotent by userId
+        s.votes.put(user.getId(), dto.value());
+        s.lastSeen.put(user.getId(), Instant.now());
+        log.info("Vote cast: boardId={}, userId={}", id, user.getId());
+        emit(id, "VOTE_CAST", Map.of("userId", user.getId(), "masked", true));
+        // auto-reveal if enabled and all online participants voted
+        if (s.autoReveal) {
+            boolean allVoted = participants(b.get(), s).stream().filter(p -> p.online).allMatch(p -> s.votes.containsKey(p.userId));
+            if (allVoted && !s.votes.isEmpty()) {
+                doReveal(b.get(), s);
+                log.info("Auto reveal triggered: boardId={}, votes={} ", id, s.votes.size());
+                emit(id, "REVEALED", buildRevealPayload(b.get(), s));
+            }
+        }
+        return ResponseEntity.ok(Map.of("ok", true));
+    }
+
+    @PostMapping("/reveal")
+    public ResponseEntity<?> reveal(@PathVariable UUID id) {
+        Optional<User> uo = currentUser();
+        if (uo.isEmpty())
+            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(error("UNAUTHORIZED", "Missing or invalid token"));
+        User user = uo.get();
+        Optional<Board> b = boardService.findById(id);
+        if (b.isEmpty()) return ResponseEntity.status(HttpStatus.NOT_FOUND).body(error("NOT_FOUND", "Board not found"));
+        if (!isFacilitator(b.get(), user))
+            return ResponseEntity.status(HttpStatus.FORBIDDEN).body(error("FORBIDDEN", "Only facilitator can reveal"));
+        RoundState s = stateForBoard(id);
+        if (s.status == RoundStatus.revealed)
+            return ResponseEntity.status(HttpStatus.CONFLICT).body(error("ALREADY_REVEALED", "Already revealed"));
+        doReveal(b.get(), s);
+        log.info("Revealed manually: boardId={}, byUserId={}, votes={}", id, user.getId(), s.votes.size());
+        emit(id, "REVEALED", buildRevealPayload(b.get(), s));
+        return ResponseEntity.ok(Map.of("ok", true));
+    }
+
+    @GetMapping(path = "/events", produces = MediaType.TEXT_EVENT_STREAM_VALUE)
+    public SseEmitter events(HttpServletRequest request, @PathVariable UUID id) {
+        Optional<User> uo = currentUser();
+        if (uo.isEmpty()) return null;
+
+        long timeoutMs = 120L * 60L * 1000L;
+        SseEmitter emitter = new SseEmitter(timeoutMs);
+        // Remove previous emitter for same user on resubscribe to avoid leaks
+        UUID userId = uo.get().getId();
+        ConcurrentHashMap<UUID, SseEmitter> map = EMITTERS.computeIfAbsent(id, k -> new ConcurrentHashMap<>());
+        SseEmitter prev = map.put(userId, emitter);
+        if (prev != null) {
+            try {
+                prev.complete();
+            } catch (Exception ignored) {
+            }
+        }
+        log.info("SSE subscribed: boardId={}, userId={}, totalSubscribers={}", id, userId, map.size());
+        Runnable remove = () -> {
+            SseEmitter current = map.get(userId);
+            if (current == emitter) {
+                map.remove(userId);
+            }
+        };
+        emitter.onCompletion(() -> {
+            remove.run();
+            log.info("SSE completed: boardId={}, userId={}", id, userId);
+        });
+        emitter.onTimeout(() -> {
+            remove.run();
+            log.info("SSE timeout: boardId={}, userId={}", id, userId);
+        });
+        emitter.onError(t -> {
+            remove.run();
+            log.warn("SSE error: boardId={}, userId={}, error={}", id, userId, t.getMessage());
+        });
+        try {
+            emitter.send(SseEmitter.event().name("CONNECTED").data(Map.of("time", Instant.now().toString())));
+        } catch (IOException | IllegalStateException ex) {
+            try {
+                emitter.completeWithError(ex);
+            } catch (Exception ignored) {
+            }
+            remove.run();
+        }
+        return emitter;
+    }
+
+    @PostMapping("/round")
+    public ResponseEntity<?> round(@PathVariable UUID id, @RequestBody RoundRequest dto) {
+        Optional<User> uo = currentUser();
+        if (uo.isEmpty())
+            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(error("UNAUTHORIZED", "Missing or invalid token"));
+        User user = uo.get();
+        Optional<Board> b = boardService.findById(id);
+        if (b.isEmpty()) return ResponseEntity.status(HttpStatus.NOT_FOUND).body(error("NOT_FOUND", "Board not found"));
+        if (!isFacilitator(b.get(), user))
+            return ResponseEntity.status(HttpStatus.FORBIDDEN).body(error("FORBIDDEN", "Only facilitator can start new round"));
+        RoundState s = stateForBoard(id);
+        // Start new round with optional task
+        s.task = new TaskDto(dto.taskId(), dto.title(), dto.link(), dto.description());
+        s.votes.clear();
+        s.status = RoundStatus.voting;
+        s.summary = null;
+        s.startedAt = Instant.now();
+        log.info("Round started: boardId={}, byUserId={}, taskKey={}", id, user.getId(), s.task != null ? s.task.key() : null);
+        emit(id, "ROUND_STARTED", Map.of("task", s.task));
+        return ResponseEntity.ok(Map.of("ok", true));
+    }
+
+    @GetMapping("/history")
+    public ResponseEntity<?> history(@PathVariable UUID id, @RequestParam(name = "limit", required = false, defaultValue = "20") int limit) {
+        Optional<User> uo = currentUser();
+        if (uo.isEmpty())
+            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(error("UNAUTHORIZED", "Missing or invalid token"));
+        Optional<Board> b = boardService.findById(id);
+        if (b.isEmpty()) return ResponseEntity.status(HttpStatus.NOT_FOUND).body(error("NOT_FOUND", "Board not found"));
+        List<RoundSnapshot> items = HISTORY.getOrDefault(id, List.of());
+        if (items.size() > limit) {
+            items = new ArrayList<>(items.subList(0, limit));
+        }
+        log.debug("History fetched: boardId={}, returned={}, total={} ", id, items.size(), HISTORY.getOrDefault(id, List.of()).size());
+        return ResponseEntity.ok(items);
+    }
 
     private Optional<User> currentUser() {
         Authentication auth = SecurityContextHolder.getContext().getAuthentication();
@@ -147,15 +322,18 @@ public class EstimateController {
                         .name(eventName)
                         .data(data);
                 emitter.send(builder);
-            } catch (IllegalStateException | IOException ex) {
-                deadUsers.add(userId);
-                try { emitter.completeWithError(ex); } catch (Exception ignored) {}
             } catch (Exception ex) {
                 deadUsers.add(userId);
-                try { emitter.completeWithError(ex); } catch (Exception ignored) {}
+                try {
+                    emitter.completeWithError(ex);
+                } catch (Exception ignored) {
+                    log.warn("Failed to complete SSE error for user {}: {}", userId, ex.getMessage());
+                }
             }
         }
-        for (UUID uid : deadUsers) { map.remove(uid); }
+        for (UUID uid : deadUsers) {
+            map.remove(uid);
+        }
     }
 
     private static Map<String, String> error(String code, String message) {
@@ -163,41 +341,46 @@ public class EstimateController {
     }
 
     private List<ParticipantDto> participants(Board board, RoundState s) {
-        // For minimal implementation, participants = board members in DB if any; otherwise only users who joined (tracked via lastSeen)
-        // Status: online if lastSeen within 60s
+        // Status: online if lastSeen within 30 m
         Instant now = Instant.now();
-        long offlineThresholdMs = 60_000L;
+        long offlineThresholdMs = 1000L * 60L * 30L;
+
         Set<UUID> ids = new HashSet<>(s.lastSeen.keySet());
-        // also include owner as facilitator
+        // also include an owner as facilitator
         ids.add(board.getOwner().getId());
         // Map to names
         List<ParticipantDto> list = new ArrayList<>();
+
         for (UUID uid : ids) {
-            Optional<User> uo = userService.findById(uid);
-            if (uo.isEmpty()) continue;
-            User u = uo.get();
-            ParticipantDto p = new ParticipantDto();
-            p.userId = u.getId();
-            String displayName = userProfilesService.findByUserId(u.getId()).map(UserProfile::getDisplayName).orElse(null);
-            if (displayName == null || displayName.isBlank()) displayName = u.getUsername()!=null && !u.getUsername().isBlank() ? u.getUsername() : u.getEmail();
-            p.name = displayName;
+            Optional<User> optionalUser = userService.findById(uid);
+            if (optionalUser.isEmpty()) continue;
+            User user = optionalUser.get();
+            ParticipantDto participantDto = new ParticipantDto();
+            participantDto.userId = user.getId();
+            String displayName = userProfilesService.findByUserId(user.getId()).map(UserProfile::getDisplayName).orElse(null);
+            if (displayName == null || displayName.isBlank())
+                displayName = user.getUsername() != null && !user.getUsername().isBlank() ? user.getUsername() : user.getEmail();
+            participantDto.name = displayName;
             String initials = "";
-            if (displayName != null && !displayName.isBlank()) initials = displayName.substring(0,1).toUpperCase();
-            p.initials = initials;
+            if (displayName != null && !displayName.isBlank()) initials = displayName.substring(0, 1).toUpperCase();
+            participantDto.initials = initials;
             boolean online = s.lastSeen.containsKey(uid) && (now.toEpochMilli() - s.lastSeen.get(uid).toEpochMilli() < offlineThresholdMs);
-            p.online = online;
+            participantDto.online = online;
             String v = s.votes.get(uid);
             boolean hasVoted = v != null;
-            p.status = online ? (hasVoted ? "voted" : "waiting") : "offline";
-            p.vote = (s.status == RoundStatus.revealed) ? v : null;
-            p.voteMasked = (s.status == RoundStatus.revealed) ? null : (hasVoted ? "V" : "?");
-            list.add(p);
+            participantDto.status = online ? (hasVoted ? "voted" : "waiting") : "offline";
+            participantDto.vote = (s.status == RoundStatus.revealed) ? v : null;
+            participantDto.voteMasked = (s.status == RoundStatus.revealed) ? null : (hasVoted ? "V" : "?");
+            list.add(participantDto);
         }
+
         // Sort: facilitator first (owner), then by name
-        list.sort((a,b) -> {
+        list.sort((a, b) -> {
             boolean af = a.userId.equals(board.getOwner().getId());
             boolean bf = b.userId.equals(board.getOwner().getId());
-            if (af && !bf) return -1; if (bf && !af) return 1; return a.name.compareToIgnoreCase(b.name);
+            if (af && !bf) return -1;
+            if (bf && !af) return 1;
+            return a.name.compareToIgnoreCase(b.name);
         });
         return list;
     }
@@ -205,143 +388,38 @@ public class EstimateController {
     private Summary computeSummary(Collection<String> values) {
         List<Integer> nums = values.stream().filter(Objects::nonNull).map(Integer::parseInt).sorted().toList();
         if (nums.isEmpty()) return null;
-        Summary s = new Summary();
-        s.min = String.valueOf(nums.get(0));
-        s.max = String.valueOf(nums.get(nums.size()-1));
-        int mid = nums.size()/2;
-        if (nums.size()%2==0) {
-            s.median = String.valueOf(nums.get(mid-1));
+        Summary summary = new Summary();
+        summary.min = String.valueOf(nums.getFirst());
+        summary.max = String.valueOf(nums.getLast());
+        int mid = nums.size() / 2;
+        if (nums.size() % 2 == 0) {
+            summary.median = String.valueOf(nums.get(mid - 1));
         } else {
-            s.median = String.valueOf(nums.get(mid));
+            summary.median = String.valueOf(nums.get(mid));
         }
+
         // mode
-        Map<Integer, Long> freq = nums.stream().collect(Collectors.groupingBy(x->x, Collectors.counting()));
-        int mode = nums.get(0);
+        Map<Integer, Long> freq = nums.stream().collect(Collectors.groupingBy(x -> x, Collectors.counting()));
+        int mode = nums.getFirst();
         long best = 0;
         for (Map.Entry<Integer, Long> e : freq.entrySet()) {
-            if (e.getValue() > best) { best = e.getValue(); mode = e.getKey(); }
+            if (e.getValue() > best) {
+                best = e.getValue();
+                mode = e.getKey();
+            }
         }
-        s.mode = String.valueOf(mode);
-        s.consensus = freq.size() == 1;
-        return s;
+        summary.mode = String.valueOf(mode);
+        summary.consensus = freq.size() == 1;
+        return summary;
     }
 
     private ResponseEntity<?> checkBoardAccess(UUID id, User user) {
-        Optional<Board> b = boardService.findById(id);
-        if (b.isEmpty()) return ResponseEntity.status(HttpStatus.NOT_FOUND).body(error("NOT_FOUND", "Board not found"));
-        // For minimal viable: allow owner and any member who has joined via join endpoint
-        return ResponseEntity.ok(b.get());
-    }
-
-    // --- Endpoints ---
-
-    @GetMapping({"/state", "/estimate"})
-    public ResponseEntity<?> state(@PathVariable UUID id) {
-        Optional<User> uo = currentUser();
-        if (uo.isEmpty()) return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(error("UNAUTHORIZED","Missing or invalid token"));
-        ResponseEntity<?> access = checkBoardAccess(id, uo.get());
-        if (access.getStatusCode().isError()) return access;
-        Board board = (Board) access.getBody();
-        RoundState s = stateForBoard(id);
-        Map<String,Object> resp = new LinkedHashMap<>();
-        resp.put("status", s.status.name());
-        resp.put("task", s.task);
-        resp.put("participants", participants(board, s));
-        resp.put("allowedValues", FIBONACCI);
-        resp.put("summary", s.status==RoundStatus.revealed ? s.summary : null);
-        log.debug("State fetched: boardId={}, status={}, votes={}, task={}", id, s.status, s.votes.size(), s.task != null ? s.task.key() : null);
-        return ResponseEntity.ok(resp);
-    }
-
-    @GetMapping(path = "/events", produces = MediaType.TEXT_EVENT_STREAM_VALUE)
-    public SseEmitter events(HttpServletRequest request, @PathVariable UUID id) {
-        Optional<User> uo = currentUser();
-        if (uo.isEmpty()) return null;
-        // 120 minutes timeout
-        long timeoutMs = 120L * 60L * 1000L;
-        SseEmitter emitter = new SseEmitter(timeoutMs);
-        // Remove previous emitter for same user on resubscribe to avoid leaks
-        UUID userId = uo.get().getId();
-        ConcurrentHashMap<UUID, SseEmitter> map = EMITTERS.computeIfAbsent(id, k -> new ConcurrentHashMap<>());
-        SseEmitter prev = map.put(userId, emitter);
-        if (prev != null) {
-            try { prev.complete(); } catch (Exception ignored) {}
+        Optional<Board> optionalBoard = boardService.findById(id);
+        if (optionalBoard.isEmpty()) {
+            return ResponseEntity.status(HttpStatus.NOT_FOUND).body(error("NOT_FOUND", "Board not found"));
         }
-        log.info("SSE subscribed: boardId={}, userId={}, totalSubscribers={}", id, userId, map.size());
-        Runnable remove = () -> {
-            SseEmitter current = map.get(userId);
-            if (current == emitter) {
-                map.remove(userId);
-            }
-        };
-        emitter.onCompletion(() -> { remove.run(); log.info("SSE completed: boardId={}, userId={}", id, userId); });
-        emitter.onTimeout(() -> { remove.run(); log.info("SSE timeout: boardId={}, userId={}", id, userId); });
-        emitter.onError(t -> { remove.run(); log.warn("SSE error: boardId={}, userId={}, error={}", id, userId, t.getMessage()); });
-        try {
-            emitter.send(SseEmitter.event().name("CONNECTED").data(Map.of("time", Instant.now().toString())));
-        } catch (IOException | IllegalStateException ex) {
-            try { emitter.completeWithError(ex); } catch (Exception ignored) {}
-            remove.run();
-        }
-        return emitter;
-    }
-
-    @PostMapping("/join")
-    public ResponseEntity<?> join(@PathVariable UUID id) {
-        Optional<User> uo = currentUser();
-        if (uo.isEmpty()) return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(error("UNAUTHORIZED","Missing or invalid token"));
-        User user = uo.get();
-        Optional<Board> b = boardService.findById(id);
-        if (b.isEmpty()) return ResponseEntity.status(HttpStatus.NOT_FOUND).body(error("NOT_FOUND","Board not found"));
-        RoundState s = stateForBoard(id);
-        s.lastSeen.put(user.getId(), Instant.now());
-        // Emit event
-        log.info("User joined: boardId={}, userId={}", id, user.getId());
-        emit(id, "USER_JOINED", Map.of("userId", user.getId(), "name", user.getEmail()));
-        return ResponseEntity.ok(Map.of("ok", true));
-    }
-
-    @PostMapping("/vote")
-    public ResponseEntity<?> vote(@PathVariable UUID id, @RequestBody VoteRequest dto) {
-        Optional<User> uo = currentUser();
-        if (uo.isEmpty()) return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(error("UNAUTHORIZED","Missing or invalid token"));
-        User user = uo.get();
-        Optional<Board> b = boardService.findById(id);
-        if (b.isEmpty()) return ResponseEntity.status(HttpStatus.NOT_FOUND).body(error("NOT_FOUND","Board not found"));
-        RoundState s = stateForBoard(id);
-        if (s.status == RoundStatus.revealed) return ResponseEntity.status(HttpStatus.UNPROCESSABLE_ENTITY).body(error("REVEALED","Voting closed"));
-        if (!FIBONACCI.contains(dto.value())) return ResponseEntity.status(HttpStatus.BAD_REQUEST).body(error("BAD_VALUE","Value not allowed"));
-        // Idempotent by userId
-        s.votes.put(user.getId(), dto.value());
-        s.lastSeen.put(user.getId(), Instant.now());
-        log.info("Vote cast: boardId={}, userId={}", id, user.getId());
-        emit(id, "VOTE_CAST", Map.of("userId", user.getId(), "masked", true));
-        // auto-reveal if enabled and all online participants voted
-        if (s.autoReveal) {
-            boolean allVoted = participants(b.get(), s).stream().filter(p -> p.online).allMatch(p -> s.votes.containsKey(p.userId));
-            if (allVoted && !s.votes.isEmpty()) {
-                doReveal(b.get(), s);
-                log.info("Auto reveal triggered: boardId={}, votes={} ", id, s.votes.size());
-                emit(id, "REVEALED", buildRevealPayload(b.get(), s));
-            }
-        }
-        return ResponseEntity.ok(Map.of("ok", true));
-    }
-
-    @PostMapping("/reveal")
-    public ResponseEntity<?> reveal(@PathVariable UUID id) {
-        Optional<User> uo = currentUser();
-        if (uo.isEmpty()) return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(error("UNAUTHORIZED","Missing or invalid token"));
-        User user = uo.get();
-        Optional<Board> b = boardService.findById(id);
-        if (b.isEmpty()) return ResponseEntity.status(HttpStatus.NOT_FOUND).body(error("NOT_FOUND","Board not found"));
-        if (!isFacilitator(b.get(), user)) return ResponseEntity.status(HttpStatus.FORBIDDEN).body(error("FORBIDDEN","Only facilitator can reveal"));
-        RoundState s = stateForBoard(id);
-        if (s.status == RoundStatus.revealed) return ResponseEntity.status(HttpStatus.CONFLICT).body(error("ALREADY_REVEALED","Already revealed"));
-        doReveal(b.get(), s);
-        log.info("Revealed manually: boardId={}, byUserId={}, votes={}", id, user.getId(), s.votes.size());
-        emit(id, "REVEALED", buildRevealPayload(b.get(), s));
-        return ResponseEntity.ok(Map.of("ok", true));
+        // For minimal viable: allow an owner and any member who has joined via join endpoint
+        return ResponseEntity.ok(optionalBoard.get());
     }
 
     private void doReveal(Board board, RoundState s) {
@@ -349,8 +427,8 @@ public class EstimateController {
         s.summary = computeSummary(s.votes.values());
     }
 
-    private Map<String,Object> buildRevealPayload(Board board, RoundState s) {
-        Map<String,Object> payload = new LinkedHashMap<>();
+    private Map<String, Object> buildRevealPayload(Board board, RoundState s) {
+        Map<String, Object> payload = new LinkedHashMap<>();
         payload.put("status", s.status.name());
         payload.put("participants", participants(board, s));
         payload.put("summary", s.summary);
@@ -360,14 +438,16 @@ public class EstimateController {
     @PostMapping("/reset")
     public ResponseEntity<?> reset(@PathVariable UUID id) {
         Optional<User> uo = currentUser();
-        if (uo.isEmpty()) return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(error("UNAUTHORIZED","Missing or invalid token"));
+        if (uo.isEmpty())
+            return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(error("UNAUTHORIZED", "Missing or invalid token"));
         User user = uo.get();
         Optional<Board> b = boardService.findById(id);
-        if (b.isEmpty()) return ResponseEntity.status(HttpStatus.NOT_FOUND).body(error("NOT_FOUND","Board not found"));
-        if (!isFacilitator(b.get(), user)) return ResponseEntity.status(HttpStatus.FORBIDDEN).body(error("FORBIDDEN","Only facilitator can reset"));
+        if (b.isEmpty()) return ResponseEntity.status(HttpStatus.NOT_FOUND).body(error("NOT_FOUND", "Board not found"));
+        if (!isFacilitator(b.get(), user))
+            return ResponseEntity.status(HttpStatus.FORBIDDEN).body(error("FORBIDDEN", "Only facilitator can reset"));
         RoundState s = stateForBoard(id);
         if (s.status == RoundStatus.voting && s.votes.isEmpty()) {
-            return ResponseEntity.status(HttpStatus.CONFLICT).body(error("ALREADY_RESET","Nothing to reset"));
+            return ResponseEntity.status(HttpStatus.CONFLICT).body(error("ALREADY_RESET", "Nothing to reset"));
         }
         // Save to history
         RoundSnapshot snap = new RoundSnapshot();
@@ -376,48 +456,14 @@ public class EstimateController {
         snap.endedAt = Instant.now();
         snap.votes = new HashMap<>(s.votes);
         snap.summary = s.summary;
-        HISTORY.computeIfAbsent(id, k -> new ArrayList<>()).add(0, snap);
+        HISTORY.computeIfAbsent(id, k -> new ArrayList<>()).addFirst(snap);
         // Reset
         s.votes.clear();
         s.status = RoundStatus.voting;
         s.summary = null;
         s.startedAt = Instant.now();
         log.info("Round reset: boardId={}, byUserId={}, historySize={}", id, user.getId(), HISTORY.getOrDefault(id, List.of()).size());
-        emit(id, "RESET", Map.of("status","voting"));
+        emit(id, "RESET", Map.of("status", "voting"));
         return ResponseEntity.ok(Map.of("ok", true));
-    }
-
-    @PostMapping("/round")
-    public ResponseEntity<?> round(@PathVariable UUID id, @RequestBody RoundRequest dto) {
-        Optional<User> uo = currentUser();
-        if (uo.isEmpty()) return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(error("UNAUTHORIZED","Missing or invalid token"));
-        User user = uo.get();
-        Optional<Board> b = boardService.findById(id);
-        if (b.isEmpty()) return ResponseEntity.status(HttpStatus.NOT_FOUND).body(error("NOT_FOUND","Board not found"));
-        if (!isFacilitator(b.get(), user)) return ResponseEntity.status(HttpStatus.FORBIDDEN).body(error("FORBIDDEN","Only facilitator can start new round"));
-        RoundState s = stateForBoard(id);
-        // Start new round with optional task
-        s.task = new TaskDto(dto.taskId(), dto.title(), dto.link(), dto.description());
-        s.votes.clear();
-        s.status = RoundStatus.voting;
-        s.summary = null;
-        s.startedAt = Instant.now();
-        log.info("Round started: boardId={}, byUserId={}, taskKey={}", id, user.getId(), s.task != null ? s.task.key() : null);
-        emit(id, "ROUND_STARTED", Map.of("task", s.task));
-        return ResponseEntity.ok(Map.of("ok", true));
-    }
-
-    @GetMapping("/history")
-    public ResponseEntity<?> history(@PathVariable UUID id, @RequestParam(name = "limit", required = false, defaultValue = "20") int limit) {
-        Optional<User> uo = currentUser();
-        if (uo.isEmpty()) return ResponseEntity.status(HttpStatus.UNAUTHORIZED).body(error("UNAUTHORIZED","Missing or invalid token"));
-        Optional<Board> b = boardService.findById(id);
-        if (b.isEmpty()) return ResponseEntity.status(HttpStatus.NOT_FOUND).body(error("NOT_FOUND","Board not found"));
-        List<RoundSnapshot> items = HISTORY.getOrDefault(id, List.of());
-        if (items.size() > limit) {
-            items = new ArrayList<>(items.subList(0, limit));
-        }
-        log.debug("History fetched: boardId={}, returned={}, total={} ", id, items.size(), HISTORY.getOrDefault(id, List.of()).size());
-        return ResponseEntity.ok(items);
     }
 }
